refactor: make HierarchyLevel immutable with final fields
Also convert ParseResult to a record and use getFirst() in
getContentRoot() for consistency.